  * Added removeIfExist call to miscmodule for some peformance improvement.
  * ELF files that find non-system libraries via an RPATH now have the path
    to the library encoded in their dependency requirement, matching the 
    path encoded in the dependency provision.  Before this, the RPATH
    was ignored and the path encoding was only guessed within one source
    package.

Changes in 0.62.15:
  * The MakeDevices() policy now accepts mode= as a named argument.
  * Added (undocumented) --debug (prints debugging output), 
    switched old (undocumented) --debug to now be --debugger (starts debugger
    on initialization)
  * Added debug messages to conaryclient/update.py
  * Cloning to the the same branch works (providing a good way of
    reverting changes)
  * Cloning now updates buildRequirements and loadedTroves in troveInfo
    and enforces their consistency on the target branch
  * Cloning groups is now supported
  * Fix update case where a group update should cause conary to search the 
    system for an older version of a trove to replace.
  * If you update a trove foo locally to a new version on the same branch, and 
    then update the containing group to a new version on a different branch,
    conary will now update foo to the new branch as well. 
  * fix error message when you try to pin as non-root

Changes in 0.62.14:
  * The threading changes in .13 caused some error information to be lost.
    Tracebacks have now been fixed, and the download thread checks much more
    often to see if it needs to exit.
  * Catch InstallBucketConflicts exception

Changes in 0.62.13:
  o Repository Server changes
    * The Schema creation SQL statements have been rewritten in a more
      standardized form. Some indexes have been redefined and a number
      of views have made their way into the default repository schema.
    * The new call troveNamesOnServer can be used now by the netclient
      code for a much faster retrieval of all trove names available on